turtleart.square.Square.scala.error
Erreur de compilation :
Square:3: error: '<-' expected but ')' found.
  for(i to 3){
            ^Square:9: error: illegal start of simple expression
} 
^