turtleart.square.Square.scala.code
override def run() {
  var i: int = 0;
  for(i to 3){
    avance(200);
 	 droite(90);
  } 
      
  
}